--- a/FATEhelper/FATEhelper.csproj
+++ b/FATEhelper/FATEhelper.csproj
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Dalamud.NET.Sdk/14.0.1">
   <PropertyGroup>
-    <Version>0.0.0.2</Version>
-    <Description>Shows a list of active FATEs with option for flagging and teleporting.</Description>
+    <Version>1.0.0.0</Version>
+    <Description>Displays a list of all FATEs in the current area with: time remaining, percent completed, and bonus marker. Clicking on FATE name will flag it and teleport you, if flying isn't faster. Works with Eureka and Occult FATEs, and Bozja skirmishes. NOTE: this plugin does not track specific FATEs. You can add the Sonar plugin to track those.</Description>
     <PackageProjectUrl>https://github.com/teechep/FATEhelper</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
